--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -9,16 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Class5Demo"
-            android:label="@string/title_activity_class5_demo"
-            android:theme="@style/AppTheme.NoActionBar">
-
+        <activity android:name=".Class5Homework">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Class5Demo"
+            android:label="@string/title_activity_class5_demo"
+            android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
         <activity
             android:name=".MusicAppDemo"
@@ -27,13 +29,13 @@
         <activity
             android:name=".ListView_ContactActivity"
             android:label="@string/title_activity_list_view__contact"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity" />
+
     </application>
 
 </manifest>
